--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,18 +1,16 @@
 workflows:
   build-android-app:
     name: Build Android APK
-    max_build_duration: 10
+    max_build_duration: 15
     environment:
-      vars:
-        JAVA_VERSION: 17
-      android:
-        image: latest
+      java: 17
     scripts:
-      - echo "Building APK..."
+      - echo "Starting build..."
+      - chmod +x gradlew
       - ./gradlew clean assembleDebug
     artifacts:
       - app/build/outputs/apk/debug/app-debug.apk
     publishing:
       email:
         recipients:
-          - adm.shadoww@gmail.com
+          - your.email@example.com
