--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -13,4 +13,4 @@ workflows:
     publishing:
       email:
         recipients:
-          - your.email@example.com
+          - adm.shadoww@gmail.com
