--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,15 +1,15 @@
 workflows:
-  build-android-app:
-    name: Build Android APK
-    max_build_duration: 20
+  android-native-build:
+    name: Build Native Android APK
+    instance_type: mac_mini_m1
     environment:
-      flutter: stable
+      java: 11
     scripts:
-      - name: Get dependencies
-        script: |
-          flutter pub get
-      - name: Build APK
-        script: |
-          flutter build apk --debug
+      - name: Set execute permission for gradlew
+        script: | 
+          chmod +x gradlew
+      - name: Build debug APK
+        script: | 
+          ./gradlew assembleDebug
     artifacts:
-      - build/app/outputs/flutter-apk/app-debug.apk
+      - build/outputs/apk/debug/*.apk
